--- a/templates/rah/home_logged_out.html
+++ b/templates/rah/home_logged_out.html
@@ -54,7 +54,7 @@
 {% block pagejs %}
     <script>
         require({
-            priority: ["{% dated_static 'js/pages/base.js' %}", "{% dated_static 'js/pages/rah.home_logged_out.js' %}"]
+            priority: ["{% dated_static 'js/pages/base.js' %}", "{% dated_static 'js/pages/rah.home_logged_out.js' %}", "https://connect.facebook.net/en_US/all.js"]
         }, ["{% dated_static 'js/pages/base.js' %}", "{% dated_static 'js/pages/rah.home_logged_out.js' %}"]);
     </script>
 {% endblock %}
