Revert "moved jquery into the libs directory, it will now be built with our base.js file"
This reverts commit f7096deb788195317995a8afca1b77ad337ed7ce.

--- a/templates/base.html
+++ b/templates/base.html
@@ -141,6 +141,7 @@
                 this.facebook_appid = {{ FACEBOOK_APPID }};
             }).apply(RAH.ENV);
         </script>
+        <script type="text/javascript" charset="utf-8" src="{% dated_static 'js/jquery.js' %}"></script>
         <script type="text/javascript" charset="utf-8" src="{% dated_static 'js/require.js' %}"></script>
         <!--<script  type="text/javascript" src="https://connect.facebook.net/en_US/all.js"></script>-->
         <!--<script type="text/javascript">-->
