--- a/templates/base.html
+++ b/templates/base.html
@@ -143,46 +143,25 @@
         </script>
         <script type="text/javascript" charset="utf-8" src="{% dated_static 'js/require-jquery.js' %}"></script>
         <!--<script  type="text/javascript" src="https://connect.facebook.net/en_US/all.js"></script>-->
-        <!--<script type="text/javascript">-->
-            <!--FB.init({appId: '{{ FACEBOOK_APPID }}', status: true, cookie: true, xfbml: true});-->
-        <!--</script>-->
         {% block pagejs %}
             <script>
                 require({}, ["{% dated_static 'js/pages/base.js' %}"]);
             </script>
         {% endblock %}
         {% block extrajs %}{% endblock %}
-        <!--{% if testing_feedback_form %}-->
-            <!--<script type="text/javascript" charset="utf-8" src="{% dated_static 'js/testing_widget.js' %}"></script>-->
-        <!--{% endif %}-->
-        <!--{% if debug %}-->
-            <!--<script type="text/javascript" charset="utf-8" src="{% dated_static 'js/rah.js' %}"></script>-->
-        <!--{% else %}-->
-            <!--<script type="text/javascript" charset="utf-8" src="{% dated_static 'js/rah_min.js' %}"></script>-->
-        <!--{% endif %}-->
+        {% if testing_feedback_form %}
+            <script type="text/javascript" charset="utf-8" src="{% dated_static 'js/testing_widget.js' %}"></script>
+        {% endif %}
         {% if ask_to_share %}
             <script type="text/javascript">rah.mod_ask_to_share.init("{% url records_ask_to_share %}");</script>
             <div id="ask_to_share_container"></div>
         {% endif %}
-        <!--<script type="text/javascript">-->
-            <!--(function() {-->
-                <!--var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;-->
-                <!--ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';-->
-                <!--(document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(ga);-->
-            <!--})();-->
-        <!--</script>-->
-        <!--{% ifnotequal request.META.HTTP_X_FORWARDED_FOR "157.130.44.166" %}-->
-        <!--{# Do not use clicktale for traffic coming from inside ACP #}-->
-            <!--[> ClickTale Bottom part <]-->
-            <!--<div id="ClickTaleDiv" style="display: none;"></div>-->
-            <!--<script type="text/javascript">-->
-            <!--if(document.location.protocol!='https:')-->
-              <!--document.write(unescape("%3Cscript%20src='http://s.clicktale.net/WRb.js'%20type='text/javascript'%3E%3C/script%3E"));-->
-            <!--</script>-->
-            <!--<script type="text/javascript">-->
-            <!--if(typeof ClickTale=='function') ClickTale(4835,1,"www03");-->
-            <!--</script>-->
-            <!--[> ClickTale end of Bottom part <]-->
-        <!--{% endifnotequal %}-->
+        <script type="text/javascript">
+            (function() {
+                var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+                ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+                (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(ga);
+            })();
+        </script>
     </body>
 </html>
