removed clicktale, and added google anayltics and testing widget js back to the page

--- a/templates/base.html
+++ b/templates/base.html
@@ -143,23 +143,15 @@
         </script>
         <script type="text/javascript" charset="utf-8" src="{% dated_static 'js/require-jquery.js' %}"></script>
         <!--<script  type="text/javascript" src="https://connect.facebook.net/en_US/all.js"></script>-->
-        <!--<script type="text/javascript">-->
-            <!--FB.init({appId: '{{ FACEBOOK_APPID }}', status: true, cookie: true, xfbml: true});-->
-        <!--</script>-->
         {% block pagejs %}
             <script>
                 require({}, ["{% dated_static 'js/pages/base.js' %}"]);
             </script>
         {% endblock %}
         {% block extrajs %}{% endblock %}
-        <!--{% if testing_feedback_form %}-->
-            <!--<script type="text/javascript" charset="utf-8" src="{% dated_static 'js/testing_widget.js' %}"></script>-->
-        <!--{% endif %}-->
-        <!--{% if debug %}-->
-            <!--<script type="text/javascript" charset="utf-8" src="{% dated_static 'js/rah.js' %}"></script>-->
-        <!--{% else %}-->
-            <!--<script type="text/javascript" charset="utf-8" src="{% dated_static 'js/rah_min.js' %}"></script>-->
-        <!--{% endif %}-->
+        {% if testing_feedback_form %}
+            <script type="text/javascript" charset="utf-8" src="{% dated_static 'js/testing_widget.js' %}"></script>
+        {% endif %}
         {% if ask_to_share %}
             <script type="text/javascript">rah.mod_ask_to_share.init("{% url records_ask_to_share %}");</script>
             <div id="ask_to_share_container"></div>
