Text changes from Jill (site text 1122.docx)

--- a/actions/templates/actions/action_show.html
+++ b/actions/templates/actions/action_show.html
@@ -7,7 +7,7 @@
         <h1>Set the trend in your home</h1>
         <p>
             The actions you’ll find here will cut energy waste, lower your monthly bills and put your home on the
-            leading edge of the energy efficiency transformation.
+            leading edge of the energy efficiency revolution.
         </p>
     </div>
     <div class="box_three_bottom"></div>
