--- a/templates/rah/_pledge_block.html
+++ b/templates/rah/_pledge_block.html
@@ -13,8 +13,8 @@
             </p>
             <p>
                 A clean energy future starts with us. Across the country, Trendsetters are working to transform the way
-                our homes and communities use energy. Join us by signing the Energy Trendsetter Pledge and committing to
-                take action.
+                our homes and communities use energy. Join us by signing the <a href="/about-pledge/">Energy Trendsetter Pledge</a> 
+                and committing to take action.
             </p>
             
         </div>
