--- a/templates/rah/home_logged_in.html
+++ b/templates/rah/home_logged_in.html
@@ -100,10 +100,4 @@
         
     </div>
 {% endblock %}
-{% block pagejs %}
-    <script>
-        require({
-            priority: ["{% dated_static 'js/pages/base.js' %}", "{% dated_static 'js/pages/rah.home_logged_in.js' %}", "https://connect.facebook.net/en_US/all.js"]
-        }, ["{% dated_static 'js/pages/base.js' %}", "{% dated_static 'js/pages/rah.home_logged_in.js' %}"]);
-    </script>
-{% endblock %}
+{% block pagescript %}{% dated_static 'js/pages/rah.home_logged_in.js' %}{% endblock %}
