--- a/templates/rah/home_logged_out.html
+++ b/templates/rah/home_logged_out.html
@@ -51,10 +51,4 @@
 {# </div> #}
 
 {% endblock %}
-{% block pagejs %}
-    <script>
-        require({
-            priority: ["{% dated_static 'js/pages/base.js' %}", "{% dated_static 'js/pages/rah.home_logged_out.js' %}", "https://connect.facebook.net/en_US/all.js"]
-        }, ["{% dated_static 'js/pages/base.js' %}", "{% dated_static 'js/pages/rah.home_logged_out.js' %}"]);
-    </script>
-{% endblock %}
+{% block pagescript %}{% dated_static 'js/pages/rah.home_logged_out.js' %}{% endblock %}
