--- a/templates/rah/profile_edit.html
+++ b/templates/rah/profile_edit.html
@@ -123,4 +123,4 @@
     </div>
 {% endblock %}
 
-{% block js %}page_profile_edit{% endblock %}
+{% block pagescript %}{% dated_static 'js/pages/rah.profile.edit.js' %}{% endblock %}
