--- a/templates/registration/register.html
+++ b/templates/registration/register.html
@@ -1,4 +1,5 @@
 {% extends "rah/base.html" %}
+{% load dated_static %}
 {% block tongue %}{% endblock tongue %}
 {% block title %}Register for Repower at Home{% endblock %}
 {% block right_content %}
@@ -74,10 +75,10 @@
                         <input type="hidden" name="next" value="{{ next|escape }}" />
                     </div>
                     {% csrf_token %}
-                </form>                
+                </form>
             </div>
         </div>
         <div class="box_three_bottom"></div>
     </div>
 {% endblock %}
-{% block js %}page_register{% endblock %}
+{% block pagescript %}{% dated_static 'js/pages/rah.register.js' %}{% endblock %}
