require pagescripts are now build with individual script blocks in each template, this is slightly more flexible because it allows us to adjust the pagescripts used not only in templates that extend base.js but also in partials

--- a/templates/rah/home_logged_in.html
+++ b/templates/rah/home_logged_in.html
@@ -100,4 +100,8 @@
         
     </div>
 {% endblock %}
-{% block pagescript %}{% dated_static 'js/pages/rah.home_logged_in.js' %}{% endblock %}
+<script>
+    var RAH = RAH || {};
+    RAH.pagescripts = RAH.pagescripts || [];
+    RAH.pagescripts.push("{% dated_static 'js/pages/rah.home_logged_in.js' %}");
+</script>
