--- a/templates/base.html
+++ b/templates/base.html
@@ -146,13 +146,13 @@
         {% block pagejs %}
             <script>
                 (function() {
-                    var page_script = "{% block pagescript %}{% endblock %}";
-                        page_scripts = page_script.length ? [page_script] : [];
-                    console.log(page_scripts);
+                    RAH = RAH || {};
+                    RAH.pagescripts = RAH.pagescripts || [];
+                    console.log(RAH.pagescripts);
                     require({
                         priority: ["{%dated_static 'js/pages/base.js' %}",
-                        "https://connect.facebook.net/en_US/all.js"].concat(page_scripts)
-                    }, ["{% dated_static 'js/pages/base.js' %}"].concat(page_scripts));
+                        "https://connect.facebook.net/en_US/all.js"].concat(RAH.pagescripts)
+                    }, ["{% dated_static 'js/pages/base.js' %}"].concat(RAH.pagescripts));
                 })();
             </script>
         {% endblock %}
