Adding optimizely script tag

--- a/templates/base.html
+++ b/templates/base.html
@@ -40,6 +40,7 @@
             _gaq.push(['_setAccount', 'UA-11623269-1']);
             _gaq.push(['_trackPageview']);
         </script>
+        <script src="//cdn.optimizely.com/js/4269048.js"></script>
         {% block extrahead %}{% endblock %}
         {% if testing_feedback_form %}
             <link rel="stylesheet" href="{% dated_static 'css/testing_widget.css' %}" type="text/css" media="screen" charset="utf-8"/>
