removing the language that suggests you can still request a trendsetter sticker [completed: 577]

--- a/templates/rah/_sticker_block.html
+++ b/templates/rah/_sticker_block.html
@@ -10,7 +10,7 @@
             Show the world you made a difference with your <b class="blue_dark">free Trendsetter sticker</b>.
         </p>
         <p>
-            <a href="{% url trendsetter_sticker %}" class="button">Claim Your Sticker</a>
+            <a href="{% url trendsetter_sticker %}" class="button">Share Your Sticker</a>
         </p>
     </div>
 </div>
