--- a/templates/rah/sticker_form.html
+++ b/templates/rah/sticker_form.html
@@ -8,11 +8,9 @@
             <div id="registration_left_col">
                 <h1>You’ve earned it</h1>
                 <p>
-                    By taking the Energy Trendsetter Pledge, you’ve committed to do your part to move us toward a clean energy future. Now, show off that commitment with your Energy Trendsetter sticker. 
-                </p>
-
-                <p>
-                    Put it up on your laptop, your recycling bin, your car or anywhere it will be visible. The Trendsetter sticker is a great way to start a conversation with your friends and neighbors about how your community can eliminate waste, save money and clean up our environment.
+                Have you collected an Energy Trendsetter sticker at a Repower at Home <a href="{% url event-show %}">event</a>? Show off your achievements by displaying your sticker. 
+                    Put it up on your laptop, your recycling bin, your car or anywhere it will be visible. The sticker is a great way to start a conversation 
+                    with your friends and neighbors about how your community can eliminate waste, save money and clean up our environment.
                 </p>
                 <h2>Share your sticker</h2>
                 <p>
