migrating the password changes file to use requirejs [completed: 578]

--- a/templates/registration/password_change_form.html
+++ b/templates/registration/password_change_form.html
@@ -1,25 +1,30 @@
 {% extends "rah/base.html" %}
+{% load dated_static %}
 {% block tongue %}{% endblock tongue %}
 {% block title %}Change your Password{% endblock %}
 {% block breadcrumbs %}
- <div class="prefix_3">
-    <a href="{% url index %}">Home</a> &rsaquo;
-    Change your password
-</div>
+     <div class="prefix_3">
+        <a href="{% url index %}">Home</a> &rsaquo;
+        Change your password
+    </div>
 {% endblock %}
 {% block right_content %}
-<div class="prefix_3">
-    <div class="box_two_top"></div>
-    <div class="box_two_middle">
-        <h1>Change your password</h1>
-        <form id="password_change_form" action="" method="post" autocomplete="false">
-            {% include "rah/_overset_form.html" %}
-            <p><input type="submit" value="Submit" /></p>
-            <p><input type="hidden" name="next" value="{{ next|escape }}" /></p>
-            {% csrf_token %}
-        </form>
+    <div class="prefix_3">
+        <div class="box_two_top"></div>
+        <div class="box_two_middle">
+            <h1>Change your password</h1>
+            <form id="password_change_form" action="" method="post" autocomplete="false">
+                {% include "rah/_overset_form.html" %}
+                <p><input type="submit" value="Submit" /></p>
+                <p><input type="hidden" name="next" value="{{ next|escape }}" /></p>
+                {% csrf_token %}
+            </form>
+        </div>
+        <div class="box_two_bottom"></div>
     </div>
-    <div class="box_two_bottom"></div>
-</div>
+    <script>
+        var RAH = RAH || {};
+        RAH.pagescripts = RAH.pagescripts || [];
+        RAH.pagescripts.push("{% dated_static 'js/pages/registration.password_change.js' %}");
+    </script>
 {% endblock %}
-{% block js %}page_password_change{% endblock %}
