migrating registration password reset confirm page to use requirejs [completed: 579]

--- a/templates/registration/password_reset_confirm.html
+++ b/templates/registration/password_reset_confirm.html
@@ -1,4 +1,5 @@
 {% extends "rah/base.html" %}
+{% load dated_static %}
 {% block tongue %}{% endblock tongue %}
 {% block title %}Reset your Password{% endblock %}
 {% block breadcrumbs %}
@@ -8,21 +9,25 @@
 </div>
 {% endblock %}
 {% block right_content %}
-<div class="prefix_3">
-    <div class="box_two_top"></div>
-    <div class="box_two_middle">
-        <h1>Reset Password</h1>
-        {% if form %}
-            <form id="password_reset_confirm" action="" method="post" autocomplete="false">
-                {% include "rah/_overset_form.html" %}
-                <p><input type="submit" value="Reset password" /></p>
-                {% csrf_token %}
-            </form>
-        {% else %}
-            <p>This link is no longer valid, please request a new <a href="{% url password_reset %}">password reset</a>.</p>
-        {% endif %}
+    <div class="prefix_3">
+        <div class="box_two_top"></div>
+        <div class="box_two_middle">
+            <h1>Reset Password</h1>
+            {% if form %}
+                <form id="password_reset_confirm" action="" method="post" autocomplete="false">
+                    {% include "rah/_overset_form.html" %}
+                    <p><input type="submit" value="Reset password" /></p>
+                    {% csrf_token %}
+                </form>
+            {% else %}
+                <p>This link is no longer valid, please request a new <a href="{% url password_reset %}">password reset</a>.</p>
+            {% endif %}
+        </div>
+        <div class="box_two_bottom"></div>
     </div>
-    <div class="box_two_bottom"></div>
-</div>
+    <script>
+        var RAH = RAH || {};
+        RAH.pagescripts = RAH.pagescripts || [];
+        RAH.pagescripts.push("{% dated_static 'js/pages/registration.password_reset_confirm.js' %}");
+    </script>
 {% endblock %}
-{% block js %}page_password_reset_confirm{% endblock %}
