--- a/groups/templates/groups/group_create.html
+++ b/groups/templates/groups/group_create.html
@@ -1,4 +1,5 @@
 {% extends "groups/base.html" %}
+{% load dated_static %}
 {% block title %}Create a Team{% endblock %}
 {% block breadcrumbs %}
 <a href="{% url index %}">Home</a> &rsaquo;
@@ -6,17 +7,21 @@
 Create Team
 {% endblock %}
 {% block right_content %}
-<div class="grid_6 alpha">
-    <div class="box_two_top"></div>
-    <div class="box_two_middle">
-        <form id="group_form" action="" method="post" enctype="multipart/form-data">
-            <h1>Create a Team</h1>
-            {% include "groups/_group_form.html" %}
-            <p><input type="submit" value="Create Team" /></p>
-            {% csrf_token %}
-        </form>
+    <div class="grid_6 alpha">
+        <div class="box_two_top"></div>
+        <div class="box_two_middle">
+            <form id="group_form" action="" method="post" enctype="multipart/form-data">
+                <h1>Create a Team</h1>
+                {% include "groups/_group_form.html" %}
+                <p><input type="submit" value="Create Team" /></p>
+                {% csrf_token %}
+            </form>
+        </div>
+        <div class="box_two_bottom"></div>
     </div>
-    <div class="box_two_bottom"></div>
-</div>
+    <script>
+        var RAH = RAH || {};
+        RAH.pagescripts = RAH.pagescripts || [];
+        RAH.pagescripts.push("{% dated_static 'js/pages/group.create.js' %}");
+    </script>
 {% endblock %}
-{% block js %}page_group_create{% endblock %}
