--- a/events/templates/events/show.html
+++ b/events/templates/events/show.html
@@ -1,4 +1,5 @@
 {% extends "events/base.html" %}
+{% load dated_static %}
 {% block title %}Events on Repower at Home{% endblock %}
 {% block right_content %}
 <div class="grid_6 alpha">
@@ -90,5 +91,9 @@
 </div>
 
 {% include "rah/_house_party_dialog.html" %}
+    <script>
+        var RAH = RAH || {};
+        RAH.pagescripts = RAH.pagescripts || [];
+        RAH.pagescripts.push("{% dated_static 'js/pages/events.show.js' %}"); 
+    </script>
 {% endblock %}
-{% block js %}page_event_list{% endblock %}
