--- a/events/templates/events/detail.html
+++ b/events/templates/events/detail.html
@@ -1,4 +1,5 @@
 {% extends "events/base.html" %}
+{% load dated_static %}
 {% load comments %}
 {% block title %}{{ event }}{% endblock %}
 {% block breadcrumbs %}
@@ -73,9 +74,13 @@
             {% render_comment_form for object %}
         {% endwith %}
     </div>
+    <script>
+        var RAH = RAH || {};
+        RAH.pagescripts = RAH.pagescripts || [];
+        RAH.pagescripts.push("{% dated_static 'js/pages/events.detail.js' %}"); 
+    </script>
 {% endblock %}
-
 {% block extrajs %}
     <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
 {% endblock %}
-{% block js %}page_event_show{% endblock %}
+
