migrated the events create/edit pages to use requirejs [note: since the code is identical we are using the same js file for both, events.create.js] [completed: 586,587]

--- a/events/templates/events/edit.html
+++ b/events/templates/events/edit.html
@@ -1,4 +1,5 @@
 {% extends "events/base.html" %}
+{% load dated_static %}
 {% block title %}Edit {{ event }}{% endblock %}
 {% block breadcrumbs %}
     <a href="{% url index %}">Home</a> &rsaquo;
@@ -20,6 +21,9 @@
         </div>
         <div class="box_two_bottom"></div>
     </div>
+    <script>
+        var RAH = RAH || {};
+        RAH.pagescripts = RAH.pagescripts || [];
+        RAH.pagescripts.push("{% dated_static 'js/pages/events.create.js' %}");
+    </script>
 {% endblock %}
-
-{% block js %}page_event_edit{% endblock %}
