migrated vampire hunt page to use requirejs [completed: 591]

--- a/templates/rah/vampire_hunt.html
+++ b/templates/rah/vampire_hunt.html
@@ -154,8 +154,10 @@
             </ul>
         </div>
         <div class="box_one_bottom"></div>
-        
-
     </div>
+   <script>
+        var RAH = RAH || {};
+        RAH.pagescripts = RAH.pagescripts || [];
+        RAH.pagescripts.push("{% dated_static 'js/pages/rah.vampire_hunt.js' %}");
+    </script> 
 {% endblock %}
-{% block js %}page_vampire_hunt_landing{% endblock %}
