added an autocomplete event search widget to the event landing page, however the selecting of an event is not working. #605

--- a/events/templates/events/show.html
+++ b/events/templates/events/show.html
@@ -62,6 +62,12 @@
 <div class="grid_3 omega">
     <div class="box_one_top"></div>
     <div class="box_one_middle">
+        {% load search_widget %}
+        {% search_widget event_search %}
+    </div>
+    <div class="box_one_bottom"></div>
+    <div class="box_one_top"></div>
+    <div class="box_one_middle">
         <h3>Need some help?</h3>
         <p>
             If you would like to talk to a real person about hosting an energy meeting you can <a
