added trendsetter page javascript

--- a/templates/rah/sticker_form.html
+++ b/templates/rah/sticker_form.html
@@ -26,5 +26,9 @@
     </div>
     <div class="box_three_bottom"></div>
 </div>
+    <script>
+        var RAH = RAH || {};
+        RAH.pagescripts = RAH.pagescripts || [];
+        RAH.pagescripts.push("{% dated_static 'js/pages/rah.trendsetter_sticker.js' %}");
+    </script>
 {% endblock %}
-{% block js %}page_trendsetter_sticker{% endblock %}
