--- a/events/templates/events/show.html
+++ b/events/templates/events/show.html
@@ -97,3 +97,6 @@
         RAH.pagescripts.push("{% dated_static 'js/pages/events.show.js' %}"); 
     </script>
 {% endblock %}
+{% block extrajs %}
+    <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
+{% endblock %}
